# Restaurant-App

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .swo  .swp  Build-Backend.ps1  Build-Client-Core.ps1  Build-Xamarin.ps1  CONTRIBUTING.md  Clean.ps1  LICENSE  README.md  Restaurant.Client.sln  Restaurant.Server.sln  Restaurant.iOS.sln  Restaurant.sln  Self-Signed-Certificate.ps1  TwitterLikeButton.Xamarin.iOS.sln  appveyor.yml  azure-pipelines.yml  backend.code-workspace  coverage.sh  diagram.txt  func.sh  opencove.txt  push.sh
.github/workflows/: basket-api.yml  build-release.yml  cart-api.yml  catalog-api.yml  checkout-api.yml  codeql-analysis.yml  deploy.yml  identity-api.yml  menu-api.yml  order-api.yml  payment-api.yml  release.yml  web-app.yml
.nuget/: nuget.exe.REMOVED.git-id
Client/Libs/: ActionItemBadge.dll.mdb  Xamarin.Android.TwitterLikeButton.dll.mdb
Dashboard-Admin/: .angular-cli.json  README.md  package-lock.json  package.json  semantic.json
Dashboard-Admin/e2e/: app.po.ts
Restaurant.Server/: Restaurant.Server.sln
Server/: Restaurant.Server.sln
coverage/: coverage.xml
k8s-kustomize/: README.md
manifests/: README.md
postman-collections/: basket-api.postman_collection.json  cart-api.postman_collection.json  catalog-api.postman_collection.json  checkout-api.postman_collection.json  local-docker.postman_environment.json
src/: Restaurant.Client.sln  Restaurant.Server.sln  Xamarin.Android.Badge.sln  Xamarin.Android.TwitterLikeButton.sln
src/backend/services/catalog-api/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  run-postgres.sh  tes.yaml
src/backend/services/catalog-api/data/: categories.csv  dishes.csv
src/backend/services/catalog-api/migrations/2022-10-22-223021_catalog/: down.sql  up.sql
src/backend/services/catalog-api/migrations/2022-10-23-201152_category/: down.sql  up.sql
src/backend/services/catalog-api/src/: catalog.rs  category.rs  main.rs  models.rs  paste_id.rs  schema.rs  seed.rs  upload.rs
src/backend/services/catalog-api/src/db/: db.rs
src/backend/services/catalog-api/src/handlers/: catalog.rs  category.rs  health.rs  mod.rs  upload.rs
src/backend/services/catalog-api/src/models/: catalog.rs  category.rs  mod.rs
src/backend/services/catalog-api/src/seeder/: mod.rs  seed.rs
src/backend/services/catalog-api/src/tracing/: mod.rs  tracing.rs
vagrant/: README.md  Vagrantfile
(+2721 files in other folders)
