[package]
edition = "2021"
name = "catalog-api"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0.137"}
rand = {version = "0.8"}
uuid = { version = "1.1.2", features = ["serde", "v4"] }