[package]
edition = "2021"
name = "catalog-api"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.137"}
rand = {version = "0.8"}
uuid = { version = "1.1.2", features = ["serde", "v4"] }
diesel = { version = "2.0.4", features = ["postgres", "numeric", "chrono"] }
diesel_migrations = "2.0.0"
bigdecimal = { version = "0.4.0", features = ["serde"] }
dotenvy = "0.15"
chrono = "0.4.22"
rocket_sync_db_pools =  {version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-contrib = {version = '0.13'}
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["default"] }
opentelemetry-http = { version = "0.10.0"}
opentelemetry-semantic-conventions = "0.13.0"
http = "1.0.0"